getMatchedCSSRules() should return null when the second argument is an unrecognized pseudo-element name https://bugs.webkit.org/show_bug.cgi?id=83298

Patch by Kulanthaivel Palanichamy <kulanthaivel@codeaurora.org> on 2012-04-24
Reviewed by Ojan Vafai.

Source/WebCore:

I couldn't find any specification or any meaningful discussion on this API, but I
assume that it shouldn't be any different from window.getComputedStyle()
as far as the parameters are concerned.

Test: fast/dom/Window/getMatchedCSSRules-with-invalid-pseudo-elements.html

* page/DOMWindow.cpp:
(WebCore::DOMWindow::getMatchedCSSRules):
* page/DOMWindow.idl:

LayoutTests:

* fast/dom/Window/getMatchedCSSRules-with-invalid-pseudo-elements-expected.txt: Added.
* fast/dom/Window/getMatchedCSSRules-with-invalid-pseudo-elements.html: Added.

Canonical link: https://commits.webkit.org/102318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115164 268f45cc-cd09-0410-ab3c-d52691b4dbfc